--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
