--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.11.0",
+    "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -39,6 +40,7 @@
     "geist": "^1.3.0",
     "lucide-react": "^0.474.0",
     "next": "^15.0.1",
+    "octokit": "^4.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
