--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "noImplicitAny": false
   },
   "include": [
     ".eslintrc.cjs",
