--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@clerk/nextjs": "^6.11.0",
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.10.0",
+    "@langchain/community": "^0.3.29",
+    "@langchain/core": "^0.3.39",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -38,6 +40,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "geist": "^1.3.0",
+    "ignore": "^7.0.3",
     "lucide-react": "^0.474.0",
     "next": "^15.0.1",
     "octokit": "^4.1.1",
